--- a/notebooks/2_model_training_colab.ipynb
+++ b/notebooks/2_model_training_colab.ipynb
@@ -445,6 +445,17 @@
         "# この特定のトレーニング実行の名前（project_output_dirのサブディレクトリとして作成されます）\n",
         "experiment_name = 'tennis_detection_run1'\n",
         "\n",
+        "# --- チェックポイントと再開設定 ---\n",
+        "# トレーニングを再開する場合、ここにチェックポイントファイル (.pt) のパスを指定します。\n",
+        "# 例: '/content/drive/MyDrive/models/YOLOv8_Training_Outputs/tennis_detection_run1/weights/last.pt'\n",
+        "# 新規トレーニングの場合は None または空文字列のままにします。\n",
+        "checkpoint_to_resume = None  # ★★★ 再開する場合、ここにチェックポイントのパスを設定 ★★★\n",
+        "\n",
+        "# 何エポックごとにチェックポイントを保存するか (例: 10エポックごと)\n",
+        "# 0または負の値を指定すると、エポックごとの追加保存は行われません (last.ptとbest.ptは常に保存されます)。\n",
+        "save_every_n_epochs = 10  # ★★★ 必要に応じて変更 ★★★\n",
+        "\n",
+        "\n",
         "# --- パス設定終了 ---\n",
         "\n",
         "# プロジェクト出力ディレクトリが存在しない場合は作成\n",
@@ -453,6 +464,15 @@
         "print(f\"データセットのYAMLパス: {dataset_yaml_path}\")\n",
         "print(f\"プロジェクト出力ディレクトリ: {project_output_dir}\")\n",
         "print(f\"実験名: {experiment_name}\")\n",
+        "if checkpoint_to_resume and os.path.exists(checkpoint_to_resume):\n",
+        "    print(f\"トレーニング再開用チェックポイント: {checkpoint_to_resume}\")\n",
+        "elif checkpoint_to_resume:\n",
+        "    print(f\"警告: 指定された再開用チェックポイントが見つかりません: {checkpoint_to_resume}\")\n",
+        "    print(\"新規トレーニングとして開始されます。\")\n",
+        "else:\n",
+        "    print(\"新規トレーニングとして開始します。\")\n",
+        "print(f\"チェックポイント保存頻度: {save_every_n_epochs} エポックごと (0以下なら無効)\")\n",
+        "\n",
         "\n",
         "# データセットのYAMLファイルが存在するか確認\n",
         "if not os.path.exists(dataset_yaml_path):\n",
@@ -475,8 +495,38 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "4b8799b5",
+      "metadata": {},
+      "source": [
+        "### モデルのロードとトレーニング実行\n",
+        "\n",
+        "このセルでは、YOLOv8モデルを初期化し、トレーニングを実行します。\n",
+        "\n",
+        "**チェックポイントからの再開:**\n",
+        "前の「パスの設定」セルで `checkpoint_to_resume` に有効なチェックポイントファイル（例: `last.pt` や特定の `epoch_XXX.pt`）のパスが指定されている場合、モデルはそのチェックポイントからロードされ、トレーニングが再開されます。これにより、中断したトレーニングを続けたり、既存のモデルをさらにファインチューニングしたりできます。\n",
+        "`checkpoint_to_resume` が `None` であるか、指定されたパスにファイルが存在しない場合は、`model_name` で指定された新しい事前学習済みモデル（例: `yolov8s.pt`）からトレーニングが開始されます。\n",
+        "\n",
+        "**定期的なチェックポイント保存:**\n",
+        "`model.train()` メソッドの `save_period` パラメータに、前のセルで設定した `save_every_n_epochs` の値が渡されます。\n",
+        "`save_every_n_epochs` が1以上の場合、指定されたエポック数ごとにモデルの重みが `project_output_dir/experiment_name/weights/epoch_XXX.pt` という名前で保存されます。これにより、トレーニングの途中経過を細かく保存し、必要に応じて特定のエポックから再開できるようになります。\n",
+        "\n",
+        "**その他のパラメータ:**\n",
+        "-   `data`: データセット設定ファイル (`data.yaml`) へのパス。\n",
+        "-   `epochs`: 総トレーニングエポック数。\n",
+        "-   `imgsz`: 入力画像のサイズ。\n",
+        "-   `batch`: バッチサイズ。\n",
+        "-   `project`: トレーニング結果が保存される親ディレクトリ。\n",
+        "-   `name`: 今回のトレーニング実行固有のサブディレクトリ名。\n",
+        "-   `exist_ok=True`: `project/name` ディレクトリが既に存在する場合でもエラーとせず、上書きまたは追記を許可します。\n",
+        "\n",
+        "トレーニングが開始されると、進行状況、損失、評価メトリクスなどが表示されます。\n",
+        "**トレーニングが正常に完了した場合、このセルの処理がすべて終了すると、Colabのランタイムは自動的に切断され、リソースが解放されます。エラーが発生した場合は、ランタイムは切断されません。**"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "ae751cb9",
       "metadata": {
         "colab": {
@@ -2182,22 +2232,39 @@
       ],
       "source": [
         "from ultralytics import YOLO\n",
+        "import os # osモジュールをインポート (既に上のセルでインポートされている可能性あり)\n",
+        "from google.colab import runtime # ランタイム切断のためにインポート\n",
         "\n",
-        "# 事前学習済みのYOLOv8モデルをロード\n",
+        "# 事前学習済みのYOLOv8モデルをロードするか、チェックポイントから再開\n",
         "# 'yolov8n.pt', 'yolov8s.pt', 'yolov8m.pt', 'yolov8l.pt', 'yolov8x.pt' などのサイズを選択可能\n",
         "# 初めての場合は 'yolov8n.pt' (Nano) または 'yolov8s.pt' (Small) を推奨\n",
-        "model_name = 'yolov8s.pt'\n",
-        "model = YOLO(model_name)\n",
+        "model_name = 'yolov8s.pt' # 新規トレーニングの場合のデフォルトモデル\n",
+        "\n",
+        "if checkpoint_to_resume and os.path.exists(checkpoint_to_resume):\n",
+        "    print(f\"チェックポイントからトレーニングを再開します: {checkpoint_to_resume}\")\n",
+        "    model = YOLO(checkpoint_to_resume)\n",
+        "else:\n",
+        "    if checkpoint_to_resume: # パスは指定されたが見つからなかった場合\n",
+        "        print(f\"警告: 指定されたチェックポイント '{checkpoint_to_resume}' が見つかりませんでした。\")\n",
+        "    print(f\"新しい事前学習済みモデル ({model_name}) からトレーニングを開始します。\")\n",
+        "    model = YOLO(model_name)\n",
+        "\n",
         "\n",
         "# トレーニングのハイパーパラメータを定義\n",
         "num_epochs = 100  # トレーニングエポック数 (例: 50, 100, 200)\n",
         "batch_size = 64   # バッチサイズ (GPUメモリに応じて調整: 例 8, 16, 32)\n",
         "img_size = 640    # 入力画像サイズ (例: 640, 1280)\n",
         "\n",
-        "print(f\"モデルのトレーニングを開始します: {model_name}\")\n",
+        "print(f\"モデルのトレーニングを開始します。\")\n",
         "print(f\"エポック数: {num_epochs}, バッチサイズ: {batch_size}, 画像サイズ: {img_size}\")\n",
+        "if save_every_n_epochs > 0:\n",
+        "    print(f\"チェックポイントは {save_every_n_epochs} エポックごとに保存されます。\")\n",
+        "print(\"\\n重要: トレーニングが正常に完了した場合、このセルの最後にランタイムが自動的に切断されます。\")\n",
+        "print(\"エラーが発生した場合は、ランタイムは切断されず、エラーメッセージを確認できます。\")\n",
+        "print(\"必要なファイルがGoogle Driveに保存される設定になっていることを確認してください。\")\n",
         "\n",
         "# トレーニングを開始\n",
+        "training_successful = False\n",
         "try:\n",
         "    results = model.train(\n",
         "        data=dataset_yaml_path,\n",
@@ -2207,6 +2274,7 @@
         "        project=project_output_dir, # すべての実行結果を保存するメインディレクトリ\n",
         "        name=experiment_name,       # この特定の実行のサブディレクトリ\n",
         "        exist_ok=True,              # experiment_nameディレクトリが既に存在する場合は上書きを許可\n",
+        "        save_period=save_every_n_epochs if save_every_n_epochs > 0 else -1, # 指定エポックごとに保存 (-1で無効)\n",
         "        # device=0,                 # GPUを使用 (最初のGPUは0, CPUを使用する場合は 'cpu')\n",
         "                                    # Colabでは通常、自動的にGPUが割り当てられます。\n",
         "        # workers=8,                # データローダーのワーカー数 (ColabのCPUに応じて調整)\n",
@@ -2216,8 +2284,22 @@
         "    )\n",
         "    print(\"\\nトレーニングが正常に完了しました！\")\n",
         "    print(f\"結果、ログ、モデルの重みは次の場所に保存されました: {os.path.join(project_output_dir, experiment_name)}\")\n",
+        "    training_successful = True\n",
+        "\n",
+        "    print(\"\\nトレーニングが正常に完了したため、ランタイムを切断します...\")\n",
+        "    print(\"必要なファイルがGoogle Driveに保存されていることを確認してください。\")\n",
+        "    print(\"ランタイム切断中...\")\n",
+        "    runtime.unassign()\n",
+        "    # このprint文はランタイム切断後には表示されない可能性があります\n",
+        "    print(\"ランタイムが切断されました。Colabの接続は解除されます。\")\n",
+        "\n",
         "except Exception as e:\n",
-        "    print(f\"\\nトレーニング中にエラーが発生しました: {e}\")"
+        "    print(f\"\\nトレーニング中にエラーが発生しました: {e}\")\n",
+        "    print(\"エラーが発生したため、ランタイムは切断されません。エラー内容を確認してください。\")\n",
+        "finally:\n",
+        "    if not training_successful:\n",
+        "        print(\"\\nこのセルの処理は終了しましたが、トレーニング中にエラーが発生したか、正常に完了しませんでした。\")\n",
+        "    # training_successful が True の場合は、tryブロック内でランタイム切断メッセージが表示される"
       ]
     },
     {
@@ -2236,6 +2318,7 @@
         "- **重み:** `weights`サブディレクトリ内 (例: `best.pt`, `last.pt`)\n",
         "  - `best.pt`: 最良の検証メトリクス（通常はmAP50-95）を達成したモデルの重み。このモデルを推論に使用するのが一般的です。\n",
         "  - `last.pt`: トレーニングの最終エポックのモデルの重み。\n",
+        "  - `epoch_XXX.pt` (例: `epoch_10.pt`, `epoch_20.pt`): `save_period` で指定されたエポックごとに保存されるチェックポイント。これらを使用して特定のエポックからトレーニングを再開したり、その時点でのモデル性能を評価したりできます。\n",
         "- **結果CSV:** `results.csv`にはエポックごとのメトリクスの概要が含まれています。\n",
         "- **プロット:** 混同行列、P-R曲線などのさまざまなプロット (例: `confusion_matrix.png`, `PR_curve.png`)\n",
         "\n",
