--- a/notebooks/2_model_training_colab.ipynb
+++ b/notebooks/2_model_training_colab.ipynb
@@ -538,24 +538,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 緊急時のGPUメモリリセットセル\n",
     "import gc\n",
-    "import torch\n",
+    "import os\n",
     "\n",
-    "print(\"--- 緊急GPUメモリリセット実行 ---\")\n",
+    "# 1. Pythonのガベージコレクションを実行\n",
     "gc.collect()\n",
-    "if torch.cuda.is_available():\n",
-    "    before_alloc = torch.cuda.memory_allocated() / 1024**2\n",
-    "    torch.cuda.empty_cache()\n",
-    "    # より積極的に解放したい場合\n",
-    "    # torch.cuda.ipc_collect()\n",
-    "    after_alloc = torch.cuda.memory_allocated() / 1024**2\n",
-    "    freed = before_alloc - after_alloc\n",
-    "    print(f\"GPUメモリ解放量: {freed:.2f} MB\")\n",
-    "else:\n",
-    "    print(\"CUDA利用不可のためスキップ\")\n",
+    "print(\"Pythonのガベージコレクションを実行しました。\")\n",
     "\n",
-    "print(\"リセット処理完了。再試行か、必要に応じてランタイムを再起動してください。\")"
+    "# 2. PyTorchのGPUキャッシュをクリア (ultralyticsは内部でPyTorchを使用)\n",
+    "try:\n",
+    "    import torch\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.empty_cache()\n",
+    "        print(\"PyTorchのGPUキャッシュをクリアしました。\")\n",
+    "    else:\n",
+    "        print(\"CUDAが利用できないため、PyTorchのGPUキャッシュクリアはスキップされました。\")\n",
+    "except ImportError:\n",
+    "    print(\"PyTorchが見つからないため、GPUキャッシュのクリアはスキップされました。\")\n",
+    "except Exception as e:\n",
+    "    print(f\"PyTorch GPUキャッシュクリア中にエラーが発生しました: {e}\")\n",
+    "\n",
+    "# 3. pipのキャッシュをクリア\n",
+    "print(\"\\npipのキャッシュをクリアしています...\")\n",
+    "!pip cache purge\n",
+    "# 上のコマンドの出力がColabのセルに表示されます。\n",
+    "# 成功メッセージはpipのバージョンによって異なる場合があります。\n",
+    "print(\"pipのキャッシュクリアコマンドを実行しました。\")\n",
+    "\n",
+    "\n",
+    "print(\"\\n--- キャッシュクリア操作に関する補足 ---\")\n",
+    "print(\"上記はいくつかの一般的なキャッシュクリア操作です。\")\n",
+    "print(\"最も効果的にRAMとGPUメモリをリセットする方法は、Colabのメニューから\")\n",
+    "print(\"「ランタイム」->「ランタイムを再起動」を選択することです。\")\n",
+    "print(\"ただし、この操作を行うと、現在のセッションの変数や状態はすべて失われますのでご注意ください。\")\n",
+    "print(\"トレーニングの最後にランタイムを切断する (`runtime.unassign()`) のも、リソース解放の確実な方法です。\")"
    ]
   },
   {
