--- a/notebooks/2_model_training_colab copy.ipynb
+++ b/notebooks/2_model_training_colab copy.ipynb
@@ -21,13 +21,15 @@
     "\n",
     "このノートブックは、Google Cloud Storage (GCS) に保存されたカスタムデータセットを使用して、Google Colab上でYOLOv8モデルをトレーニングするためのものです。\n",
     "以下の内容をカバーします：\n",
-    "1. Google Cloud Storage (GCS) への認証とgcsfuseのインストール。\n",
+    "1. Google Cloud Storage (GCS) への認証。\n",
     "2. `ultralytics`ライブラリのインストール。\n",
     "3. **データセットの準備とGoogle Cloud Storage (GCS) へのアップロード**:\n",
     "   - YOLOv8形式のデータセット（画像ファイル群、対応するラベルファイル群、そしてデータセット設定ファイル `data.yaml`）を準備します。\n",
-    "   - `data.yaml` には、クラス名、クラス数、そして訓練データと検証データへのパスを記述します。これらのパスは相対パスで記述し、gcsfuseマウント後にローカルファイルのようにアクセスできます。\n",
-    "   - 準備したデータセット全体（画像、ラベル、`data.yaml`等）をGCSバケットにアップロードします。\n",
-    "4. gcsfuseによるGCSバケットのマウントとパス設定。\n",
+    "   - `data.yaml` には、クラス名、クラス数、そして訓練データと検証データへのパスを記述します。これらのパスは、画像とラベルが格納されているディレクトリを指すか、あるいは訓練用/検証用の画像ファイルパスをリストしたテキストファイル（例: `train.txt`, `val.txt`）を指します。\n",
+    "     - **重要:** `data.yaml` 内のパスは、Colabローカルにデータセットを展開した後の相対パス、またはGCS上の画像/ラベルファイルを直接指すパス (`gs://bucket-name/path/to/images`) のいずれかである必要があります。`ultralytics` はGCSパスを直接読み取ることができます。\n",
+    "   - `train.txt` や `val.txt` を使用する場合、これらは1行に1つの画像ファイルへのパス（例: `images/train/frame_000001.png` や、`data.yaml` からの相対パスで `../images/frame_000001.png`、あるいはGCSパス `gs://bucket-name/path/to/images/train/frame_000001.png` など）を記述したテキストファイルです。これらのテキストファイルと、対応する画像およびラベルファイルは、`data.yaml` から相対的にアクセスできる位置に配置する必要があります。\n",
+    "   - 準備したデータセット全体（画像、ラベル、`data.yaml`、`train.txt`、`val.txt` 等）をGCSバケットの任意の場所にアップロードします。ZIPファイルとしてアップロードし、Colabで展開する方法もサポートします。\n",
+    "4. データセットとプロジェクト出力のパス設定（Colabローカルに展開した `data.yaml` へのパス、またはGCS上の `data.yaml` へのパスを指定。プロジェクト出力はGCSパスを指定）。\n",
     "5. YOLOv8モデルのトレーニング。\n",
     "6. トレーニング済みモデルと結果のGCS上の保存場所に関する情報。"
    ]
@@ -67,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a022ae71",
+   "id": "5e6d1d2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,14 +85,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6592aac0",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "6592aac0",
-    "outputId": "4eb8739d-8280-4550-bcdc-a98a933af111"
-   },
+   "id": "454f5ea7",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# ultralyticsライブラリをインストール\n",
@@ -241,7 +237,7 @@
     "        print(f\"マウントポイントの内容を確認できませんでした: {e}\")\n",
     "    \n",
     "    print(f\"\\n重要: 次の「パスの設定」セルで、パスを {mount_point} 以下のローカルパスに設定してください。\")\n",
-    "    print(f\"例: dataset_yaml_path = '{mount_point}/datasets/data.yaml'\")\n",
+    "    print(f\"例: dataset_yaml_path = '{mount_point}/path/to/your/data.yaml'\")\n",
     "    print(f\"例: project_output_dir = '{mount_point}/models/YOLOv8_Training_Outputs'\")\n",
     "    \n",
     "else:\n",
@@ -269,11 +265,9 @@
     "# --- 重要: これらのパスをマウントしたGCSバケット内の構造に合わせて設定してください ---\n",
     "\n",
     "# データセットのdata.yamlファイルへのパス (マウントポイント以下のローカルパス)\n",
-    "# 例: '/content/gcs/datasets/data.yaml'\n",
     "dataset_yaml_path = '/content/gcs/datasets/data.yaml'  # ★★★ ここをマウントされたGCS内のdata.yamlへの実際のパスに修正してください ★★★\n",
     "\n",
     "# トレーニング結果（重み、ログなど）を保存するディレクトリ (マウントポイント以下のローカルパス)\n",
-    "# 例: '/content/gcs/models/YOLOv8_Training_Outputs'\n",
     "project_output_dir = '/content/gcs/models/YOLOv8_Training_Outputs'  # ★★★ ここをマウントされたGCS内のパスに修正してください ★★★\n",
     "\n",
     "# この特定のトレーニング実行の名前（project_output_dirのサブディレクトリとして作成されます）\n",
@@ -283,6 +277,7 @@
     "# 'cpu' または 'cuda:0' (または単に 0 や 'gpu') を指定\n",
     "training_device = 'cuda:0' # ★★★ 'cpu' または 'cuda:0' に変更 ★★★\n",
     "\n",
+    "\n",
     "# --- チェックポイントと再開設定 ---\n",
     "# トレーニングを再開する場合、ここにチェックポイントファイル (.pt) のローカルパス（マウントポイント以下）を指定します。\n",
     "# 例: '/content/gcs/models/YOLOv8_Training_Outputs/tennis_detection_gcs_run1/weights/last.pt'\n",
@@ -290,7 +285,9 @@
     "checkpoint_to_resume = None  # ★★★ 再開する場合、ここにチェックポイントのローカルパスを設定 ★★★\n",
     "\n",
     "# 何エポックごとにチェックポイントを保存するか (例: 10エポックごと)\n",
+    "# 0または負の値を指定すると、エポックごとの追加保存は行われません (last.ptとbest.ptは常に保存されます)。\n",
     "save_every_n_epochs = 10  # ★★★ 必要に応じて変更 ★★★\n",
+    "\n",
     "\n",
     "# --- パス設定終了 ---\n",
     "\n",
@@ -396,18 +393,6 @@
     "from google.colab import runtime\n",
     "import torch\n",
     "\n",
-    "# GPU メモリクリア関数を定義\n",
-    "def clear_gpu_memory():\n",
-    "    try:\n",
-    "        import torch\n",
-    "        if torch.cuda.is_available():\n",
-    "            torch.cuda.empty_cache()\n",
-    "            print(\"GPUメモリキャッシュをクリアしました。\")\n",
-    "        else:\n",
-    "            print(\"CUDAが利用できないため、GPUメモリクリアはスキップされました。\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"GPUメモリクリア中にエラーが発生しました: {e}\")\n",
-    "\n",
     "# 事前学習済みのYOLOv8モデルをロードするか、チェックポイントから再開\n",
     "# 'yolov8n.pt', 'yolov8s.pt', 'yolov8m.pt', 'yolov8l.pt', 'yolov8x.pt' などのサイズを選択可能\n",
     "# 初めての場合は 'yolov8n.pt' (Nano) または 'yolov8s.pt' (Small) を推奨\n",
@@ -425,16 +410,9 @@
     "model = YOLO(model_load_path)\n",
     "\n",
     "# トレーニングのハイパーパラメータを定義\n",
-    "num_epochs = 150  # トレーニングエポック数 (例: 50, 100, 200)\n",
-    "batch_size = 16   # バッチサイズ (GPU/CPUメモリに応じて調整: 例 8, 16, 32)\n",
+    "num_epochs = 100  # トレーニングエポック数 (例: 50, 100, 200)\n",
+    "batch_size = 8   # バッチサイズ (GPU/CPUメモリに応じて調整: 例 8, 16, 32)\n",
     "img_size = 1920    # 入力画像サイズ (例: 640, 1280)\n",
-    "\n",
-    "# A100 向け追加チューニング\n",
-    "workers   = 8         # DataLoaderの並列数\n",
-    "lr0       = 0.001     # 初期学習率\n",
-    "optimizer = 'AdamW'   # オプティマイザ\n",
-    "amp       = True      # 混合精度トレーニングを有効化 (FP16)\n",
-    "\n",
     "\n",
     "print(f\"モデルのトレーニングを開始します。\")\n",
     "print(f\"使用デバイス: {training_device}\")\n",
@@ -449,9 +427,6 @@
     "# トレーニングを開始\n",
     "training_successful = False\n",
     "try:\n",
-    "    print(\"=== トレーニング開始前のGPUメモリクリア ===\")\n",
-    "    clear_gpu_memory()\n",
-    "\n",
     "    results = model.train(\n",
     "        data=dataset_yaml_path,\n",
     "        epochs=num_epochs,\n",
@@ -462,11 +437,10 @@
     "        exist_ok=True,              # experiment_nameディレクトリが既に存在する場合は上書きを許可\n",
     "        save_period=save_every_n_epochs if save_every_n_epochs > 0 else -1, # 指定エポックごとに保存 (-1で無効)\n",
     "        device=training_device,\n",
-    "        workers=workers,                # データローダーのワーカー数 (CPUコア数やデバイスに応じて調整)\n",
+    "        # workers=8,                # データローダーのワーカー数 (CPUコア数やデバイスに応じて調整)\n",
     "        # patience=30,              # 早期終了の忍耐値 (例: 30エポック後に改善がない場合に停止)\n",
-    "        lr0=lr0                 # 初期学習率\n",
-    "        optimizer=optimizer,\n",
-    "        amp=amp        # オプティマイザ (例: 'SGD', 'Adam', 'AdamW')\n",
+    "        # lr0=0.01,                 # 初期学習率\n",
+    "        # optimizer='AdamW',        # オプティマイザ (例: 'SGD', 'Adam', 'AdamW')\n",
     "    )\n",
     "    print(\"\\nトレーニングが正常に完了しました！\")\n",
     "    full_output_path = os.path.join(project_output_dir, experiment_name)\n",
@@ -482,7 +456,7 @@
     "except torch.cuda.OutOfMemoryError as e:\n",
     "    print(\"GPU OOM エラーが発生しました:\", e)\n",
     "    print(\"GPUメモリをクリアします...\")\n",
-    "    clear_gpu_memory()\n",
+    "    torch.cuda.empty_cache()\n",
     "    print(\"バッチサイズを小さくするか、画像サイズを下げることを検討してください。\")\n",
     "except Exception as e:\n",
     "    print(f\"トレーニング中に予期せぬエラーが発生しました: {e}\")\n",
@@ -564,26 +538,6 @@
     "    print(\"最良のモデルファイル (best.pt) が見つかりません。トレーニングが失敗したか、生成されなかった可能性があります。\")\n",
     "\n",
     "print(f\"\\n注意: ファイルは自動的にGCSバケット (gs://{bucket_name}) に同期されています。\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "175b12a5",
-   "metadata": {},
-   "source": [
-    "## 推奨ハイパーパラメーター設定\n",
-    "\n",
-    "YOLOv8xで8400フレーム（imgsz=1920）を学習させる際の目安：\n",
-    "\n",
-    "- エポック数: **30～50**  \n",
-    "  - 少ないデータでは早期停止(Early Stopping)を有効にし、学習曲線を監視  \n",
-    "- バッチサイズ(batch): **8～16**  \n",
-    "  - A100(40GB)：batch=16 まで可能。OOM時は batch=8 に  \n",
-    "- 学習率(lr0): **0.01**  \n",
-    "- オプティマイザ: **AdamW**  \n",
-    "- ワーカー数(workers): **8**  \n",
-    "- 画像サイズ(imgsz): **1920**  \n",
-    "- 早期停止(patience): **10** エポック  "
    ]
   }
  ],
