--- a/notebooks/2_model_training_colab.ipynb
+++ b/notebooks/2_model_training_colab.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "# --- ★★★ ユーザー設定項目 ★★★ ---\n",
     "# マウントするGCSバケット名 (gs:// プレフィックスは不要)\n",
-    "bucket_name = 'your-bucket-name'  # ★★★ あなたのGCSバケット名に置き換えてください ★★★\n",
+    "bucket_name = 'tennis_vision_dataset'  # ★★★ あなたのGCSバケット名に置き換えてください ★★★\n",
     "\n",
     "# GCSバケットをマウントするローカルディレクトリ\n",
     "mount_point = '/content/gcs'  # ★★★ 必要であれば変更してください ★★★\n",
@@ -270,7 +270,7 @@
     "\n",
     "# データセットのdata.yamlファイルへのパス (マウントポイント以下のローカルパス)\n",
     "# 例: '/content/gcs/datasets/data.yaml'\n",
-    "dataset_yaml_path = '/content/gcs/datasets/data.yaml'  # ★★★ ここをマウントされたGCS内のdata.yamlへの実際のパスに修正してください ★★★\n",
+    "dataset_yaml_path = '/content/gcs/final_merged_dataset/data.yaml'  # ★★★ ここをマウントされたGCS内のdata.yamlへの実際のパスに修正してください ★★★\n",
     "\n",
     "# トレーニング結果（重み、ログなど）を保存するディレクトリ (マウントポイント以下のローカルパス)\n",
     "# 例: '/content/gcs/models/YOLOv8_Training_Outputs'\n",
@@ -464,9 +464,10 @@
     "        device=training_device,\n",
     "        workers=workers,                # データローダーのワーカー数 (CPUコア数やデバイスに応じて調整)\n",
     "        # patience=30,              # 早期終了の忍耐値 (例: 30エポック後に改善がない場合に停止)\n",
-    "        lr0=lr0                 # 初期学習率\n",
-    "        optimizer=optimizer,\n",
-    "        amp=amp        # オプティマイザ (例: 'SGD', 'Adam', 'AdamW')\n",
+    "        lr0=lr0,                 # 初期学習率\n",
+    "        optimizer= optimizer,\n",
+    "        amp= amp、、        # オプティマイザ (例: 'SGD', 'Adam', 'AdamW')\n",
+    "        cache=True\n",
     "    )\n",
     "    print(\"\\nトレーニングが正常に完了しました！\")\n",
     "    full_output_path = os.path.join(project_output_dir, experiment_name)\n",
