--- a/notebooks/2_model_training_colab.ipynb
+++ b/notebooks/2_model_training_colab.ipynb
@@ -466,7 +466,7 @@
     "        # patience=30,              # 早期終了の忍耐値 (例: 30エポック後に改善がない場合に停止)\n",
     "        lr0=lr0,                 # 初期学習率\n",
     "        optimizer= optimizer,\n",
-    "        amp= amp、、        # オプティマイザ (例: 'SGD', 'Adam', 'AdamW')\n",
+    "        amp= amp,        # オプティマイザ (例: 'SGD', 'Adam', 'AdamW')\n",
     "        cache=True\n",
     "    )\n",
     "    print(\"\\nトレーニングが正常に完了しました！\")\n",
