--- a/notebooks/2_model_training_colab drive.ipynb
+++ b/notebooks/2_model_training_colab drive.ipynb
@@ -34,17 +34,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Driveマウント → ultralyticsインストール → データ展開 → パス・ハイパーパラ設定\n",
+    "# Driveマウント → ultralyticsインストール → データ展開\n",
     "from google.colab import drive; drive.mount('/content/drive', force_remount=True)\n",
     "!pip install ultralytics\n",
     "\n",
-    "import os, shutil\n",
-    "# データセットをローカルにコピー\n",
-    "drive_data = '/content/drive/MyDrive/datasets/final_merged_dataset'\n",
-    "local_data = '/content/datasets'\n",
-    "if os.path.exists(local_data): shutil.rmtree(local_data)\n",
-    "shutil.copytree(drive_data, local_data)\n",
-    "dataset_yaml_path = os.path.join(local_data, 'data.yaml')\n",
+    "import os, shutil, zipfile\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# データセットをzipファイルから展開\n",
+    "print(\"データセットのzip展開を開始します...\")\n",
+    "drive_zip   = '/content/drive/MyDrive/datasets/final_merged_dataset.zip'\n",
+    "local_data  = '/content/datasets'\n",
+    "if os.path.exists(local_data):\n",
+    "    shutil.rmtree(local_data)\n",
+    "\n",
+    "with zipfile.ZipFile(drive_zip, 'r') as zip_ref:\n",
+    "    file_list = zip_ref.namelist()\n",
+    "    print(f\"展開対象ファイル数: {len(file_list)}\")\n",
+    "    \n",
+    "    for file in tqdm(file_list, desc=\"展開中\", unit=\"files\"):\n",
+    "        zip_ref.extract(file, local_data)\n",
+    "\n",
+    "print(\"データセットの展開が完了しました。\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a02ad83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# パス設定とハイパーパラメータ\n",
+    "dataset_yaml_path = os.path.join(local_data, 'data_colab.yaml')\n",
     "\n",
     "# 出力先\n",
     "project_output_dir  = '/content/drive/MyDrive/models/YOLOv8_Training_Outputs'\n",
@@ -112,18 +134,64 @@
     "import os\n",
     "from google.colab import runtime\n",
     "import torch\n",
+    "import gc\n",
     "\n",
-    "# GPU メモリクリア関数を定義\n",
-    "def clear_gpu_memory():\n",
+    "# 改良されたGPU メモリクリア関数\n",
+    "def clear_gpu_memory(verbose=True):\n",
+    "    \"\"\"GPU VRAMを完全にクリアする関数\"\"\"\n",
     "    try:\n",
-    "        import torch\n",
     "        if torch.cuda.is_available():\n",
+    "            # 使用前のメモリ状況を表示\n",
+    "            if verbose:\n",
+    "                print(f\"GPU メモリクリア前:\")\n",
+    "                print(f\"  割り当て済み: {torch.cuda.memory_allocated() / 1024**3:.2f} GB\")\n",
+    "                print(f\"  予約済み: {torch.cuda.memory_reserved() / 1024**3:.2f} GB\")\n",
+    "            \n",
+    "            # キャッシュクリア\n",
     "            torch.cuda.empty_cache()\n",
-    "            print(\"GPUメモリキャッシュをクリアしました。\")\n",
+    "            # ガベージコレクション実行\n",
+    "            gc.collect()\n",
+    "            # 再度キャッシュクリア\n",
+    "            torch.cuda.empty_cache()\n",
+    "            \n",
+    "            if verbose:\n",
+    "                print(f\"GPU メモリクリア後:\")\n",
+    "                print(f\"  割り当て済み: {torch.cuda.memory_allocated() / 1024**3:.2f} GB\")\n",
+    "                print(f\"  予約済み: {torch.cuda.memory_reserved() / 1024**3:.2f} GB\")\n",
+    "                print(\"GPUメモリキャッシュをクリアしました。\")\n",
     "        else:\n",
-    "            print(\"CUDAが利用できないため、GPUメモリクリアはスキップされました。\")\n",
+    "            if verbose:\n",
+    "                print(\"CUDAが利用できないため、GPUメモリクリアはスキップされました。\")\n",
     "    except Exception as e:\n",
     "        print(f\"GPUメモリクリア中にエラーが発生しました: {e}\")\n",
+    "\n",
+    "def force_cleanup_models():\n",
+    "    \"\"\"モデル変数を削除してメモリを解放\"\"\"\n",
+    "    try:\n",
+    "        # グローバル変数のモデルを削除\n",
+    "        if 'model' in globals():\n",
+    "            del globals()['model']\n",
+    "        if 'results' in globals():\n",
+    "            del globals()['results']\n",
+    "        \n",
+    "        # ガベージコレクション実行\n",
+    "        gc.collect()\n",
+    "        print(\"モデル変数を削除しました。\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"モデルクリーンアップ中にエラー: {e}\")\n",
+    "\n",
+    "def show_gpu_memory_info():\n",
+    "    \"\"\"現在のGPUメモリ使用状況を表示\"\"\"\n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"=== GPU メモリ使用状況 ===\")\n",
+    "        print(f\"GPU デバイス: {torch.cuda.get_device_name()}\")\n",
+    "        print(f\"総メモリ: {torch.cuda.get_device_properties(0).total_memory / 1024**3:.2f} GB\")\n",
+    "        print(f\"割り当て済み: {torch.cuda.memory_allocated() / 1024**3:.2f} GB\")\n",
+    "        print(f\"予約済み: {torch.cuda.memory_reserved() / 1024**3:.2f} GB\")\n",
+    "        print(f\"利用可能: {(torch.cuda.get_device_properties(0).total_memory - torch.cuda.memory_reserved()) / 1024**3:.2f} GB\")\n",
+    "        print(\"========================\")\n",
+    "    else:\n",
+    "        print(\"CUDA が利用できません。\")\n",
     "\n",
     "# 事前学習済みのYOLOv8モデルをロードするか、チェックポイントから再開\n",
     "# 'yolov8n.pt', 'yolov8s.pt', 'yolov8m.pt', 'yolov8l.pt', 'yolov8x.pt' などのサイズを選択可能\n",
@@ -170,7 +238,10 @@
     "\n",
     "print(\"\\n重要: トレーニングが正常に完了した場合、このセルの最後にランタイムが自動的に切断されます。\")\n",
     "print(\"エラーが発生した場合は、ランタイムは切断されず、エラーメッセージを確認できます。\")\n",
-    "print(f\"トレーニング結果はマウントされたGCSディレクトリ ({project_output_dir}) に保存される設定になっています。\")\n",
+    "print(f\"トレーニング結果はマウントされたGoogle Driveディレクトリ ({project_output_dir}) に保存される設定になっています。\")\n",
+    "\n",
+    "# 開始前のメモリ状況確認\n",
+    "show_gpu_memory_info()\n",
     "\n",
     "# トレーニングを開始\n",
     "training_successful = False\n",
@@ -202,28 +273,47 @@
     "    )\n",
     "    print(\"\\nトレーニングが正常に完了しました！\")\n",
     "    full_output_path = os.path.join(project_output_dir, experiment_name)\n",
-    "    print(f\"結果、ログ、モデルの重みはマウントされたGCS上の次の場所に保存されました: {full_output_path}\")\n",
+    "    print(f\"結果、ログ、モデルの重みはマウントされたGoogle Drive上の次の場所に保存されました: {full_output_path}\")\n",
     "    training_successful = True\n",
     "\n",
+    "    # トレーニング完了後のメモリクリア\n",
+    "    print(\"\\n=== トレーニング完了後のメモリクリア ===\")\n",
+    "    force_cleanup_models()\n",
+    "    clear_gpu_memory()\n",
+    "\n",
     "    print(\"\\nトレーニングが正常に完了したため、ランタイムを切断します...\")\n",
-    "    print(f\"必要なファイルがGCS ({full_output_path}) に保存されていることを確認してください。\")\n",
+    "    print(f\"必要なファイルがGoogle Drive ({full_output_path}) に保存されていることを確認してください。\")\n",
     "    print(\"ランタイム切断中...\")\n",
     "    runtime.unassign()\n",
     "    print(\"ランタイムが切断されました。Colabの接続は解除されます。\")\n",
     "\n",
     "except torch.cuda.OutOfMemoryError as e:\n",
-    "    print(\"GPU OOM エラーが発生しました:\", e)\n",
-    "    print(\"GPUメモリをクリアします...\")\n",
+    "    print(\"=== GPU OOM エラーが発生しました ===\")\n",
+    "    print(f\"エラー詳細: {e}\")\n",
+    "    show_gpu_memory_info()\n",
+    "    print(\"\\n緊急メモリクリアを実行します...\")\n",
+    "    force_cleanup_models()\n",
     "    clear_gpu_memory()\n",
-    "    print(\"バッチサイズを小さくするか、画像サイズを下げることを検討してください。\")\n",
+    "    print(\"\\n対処法:\")\n",
+    "    print(\"1. バッチサイズを小さくする (現在: {batch_size} → 推奨: {max(1, batch_size//2)})\")\n",
+    "    print(\"2. 画像サイズを下げる (現在: {img_size} → 推奨: 640 または 1280)\")\n",
+    "    print(\"3. モデルサイズを小さくする (yolov8x → yolov8l または yolov8m)\")\n",
+    "    print(\"4. workers数を減らす (現在: {workers} → 推奨: 4)\")\n",
     "except Exception as e:\n",
     "    print(f\"トレーニング中に予期せぬエラーが発生しました: {e}\")\n",
     "    import traceback\n",
     "    traceback.print_exc()\n",
+    "    \n",
+    "    # エラー時もメモリクリア\n",
+    "    print(\"\\nエラー後のメモリクリアを実行します...\")\n",
+    "    force_cleanup_models()\n",
+    "    clear_gpu_memory()\n",
     "finally:\n",
     "    if not training_successful:\n",
     "        print(\"\\nこのセルの処理は終了しましたが、トレーニング中にエラーが発生したか、正常に完了しませんでした。\")\n",
-    "        print(f\"エラーが発生した場合でも、部分的な結果がGCS ({os.path.join(project_output_dir, experiment_name)}) に保存されている可能性があります。\")"
+    "        print(f\"エラーが発生した場合でも、部分的な結果がGoogle Drive ({os.path.join(project_output_dir, experiment_name)}) に保存されている可能性があります。\")\n",
+    "        print(\"\\n最終的なメモリ状況:\")\n",
+    "        show_gpu_memory_info()"
    ]
   },
   {
@@ -235,8 +325,8 @@
    "source": [
     "## トレーニング結果と保存されたモデル\n",
     "\n",
-    "トレーニング後、結果（メトリクス、混同行列、モデルの重みなど）は指定したマウントされたGCSディレクトリに保存されます：\n",
-    "`{project_output_dir}/{experiment_name}` (例: `/content/gcs/models/YOLOv8_Training_Outputs/tennis_detection_gcs_run1`)\n",
+    "トレーニング後、結果（メトリクス、混同行列、モデルの重みなど）は指定したマウントされたGoogle Driveディレクトリに保存されます：\n",
+    "`{project_output_dir}/{experiment_name}` (例: `/content/drive/MyDrive/models/YOLOv8_Training_Outputs/tennis_detection_drive_run`)\n",
     "\n",
     "確認すべき主なファイル：\n",
     "- **重み:** `weights`サブディレクトリ内 (例: `best.pt`, `last.pt`)\n",
@@ -246,7 +336,7 @@
     "- **結果CSV:** `results.csv`にはエポックごとのメトリクスの概要が含まれています。\n",
     "- **プロット:** 混同行列、P-R曲線などのさまざまなプロット (例: `confusion_matrix.png`, `PR_curve.png`)\n",
     "\n",
-    "これらのファイルは自動的にGCSに同期されるため、マウントが解除された後でもGCS上で利用できます。"
+    "これらのファイルは自動的にGoogle Driveに同期されるため、マウントが解除された後でもGoogle Drive上で利用できます。"
    ]
   },
   {
@@ -295,7 +385,105 @@
     "else:\n",
     "    print(\"最良のモデルファイル (best.pt) が見つかりません。トレーニングが失敗したか、生成されなかった可能性があります。\")\n",
     "\n",
-    "print(f\"\\n注意: ファイルは自動的にGCSバケット (gs://{bucket_name}) に同期されています。\")"
+    "print(f\"\\n注意: ファイルは自動的にGoogle Drive (/content/drive/MyDrive) に同期されています。\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e75972c",
+   "metadata": {},
+   "source": [
+    "## VRAM手動開放セル\n",
+    "\n",
+    "OOMエラーが発生した場合や、メモリを手動で開放したい場合に実行してください。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "623ade8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 手動でVRAMを完全開放するセル\n",
+    "print(\"=== 手動VRAM開放を実行します ===\")\n",
+    "\n",
+    "# すべてのモデル変数を削除\n",
+    "try:\n",
+    "    if 'model' in globals():\n",
+    "        del model\n",
+    "        print(\"モデル変数を削除しました\")\n",
+    "    if 'results' in globals():\n",
+    "        del results\n",
+    "        print(\"results変数を削除しました\")\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "# ガベージコレクション\n",
+    "import gc\n",
+    "gc.collect()\n",
+    "\n",
+    "# CUDA キャッシュクリア\n",
+    "if torch.cuda.is_available():\n",
+    "    # 現在のメモリ使用量表示\n",
+    "    print(f\"クリア前 - 割り当て済み: {torch.cuda.memory_allocated() / 1024**3:.2f} GB\")\n",
+    "    print(f\"クリア前 - 予約済み: {torch.cuda.memory_reserved() / 1024**3:.2f} GB\")\n",
+    "    \n",
+    "    # メモリクリア実行\n",
+    "    torch.cuda.empty_cache()\n",
+    "    torch.cuda.ipc_collect()  # プロセス間通信のキャッシュもクリア\n",
+    "    \n",
+    "    # 完全リセット（強制的）\n",
+    "    try:\n",
+    "        torch.cuda.reset_peak_memory_stats()\n",
+    "        torch.cuda.reset_accumulated_memory_stats()\n",
+    "    except:\n",
+    "        pass\n",
+    "    \n",
+    "    # 再度ガベージコレクションとキャッシュクリア\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()\n",
+    "    \n",
+    "    print(f\"クリア後 - 割り当て済み: {torch.cuda.memory_allocated() / 1024**3:.2f} GB\")\n",
+    "    print(f\"クリア後 - 予約済み: {torch.cuda.memory_reserved() / 1024**3:.2f} GB\")\n",
+    "    print(\"VRAM開放完了\")\n",
+    "else:\n",
+    "    print(\"CUDA が利用できません\")\n",
+    "\n",
+    "print(\"=== 手動VRAM開放完了 ===\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "796d43c3",
+   "metadata": {},
+   "source": [
+    "## ランタイム完全再起動\n",
+    "\n",
+    "上記の方法でもメモリが解放されない場合は、以下のセルを実行してランタイムを完全に再起動してください。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50b38030",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ランタイムを完全に再起動（最終手段）\n",
+    "import os\n",
+    "print(\"ランタイムを完全に再起動します...\")\n",
+    "print(\"実行後、すべてのメモリがクリアされ、セッションが終了します。\")\n",
+    "print(\"再度最初のセルから実行してください。\")\n",
+    "\n",
+    "# Google Driveが既にマウントされていることを確認\n",
+    "if os.path.exists('/content/drive'):\n",
+    "    print(\"Google Drive は既にマウントされています。\")\n",
+    "else:\n",
+    "    print(\"注意: 再起動後、Google Drive の再マウントが必要です。\")\n",
+    "\n",
+    "# 強制再起動\n",
+    "os.kill(os.getpid(), 9)"
    ]
   }
  ],
